--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-permalink: /notes/:year/:month/:day/:title
+permalink: /:year/:month/:day/:title
+
+markdown: rdiscount
+rdiscount:
+  extensions: [smart]
