update xml feed

--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,8 @@ pygments: true
 rdiscount:
   extensions: [smart]
 
+title: Phillip's Blog
+tagline: The Notes, Quotes, and Other Miscellany of Phillip T. Ridlen
+name: Phillip T. Ridlen
 url: http://blog.phillipridlen.com
 email: p@rdln.net
