--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "notes/_posts"]
 	path = notes/_posts
-	url = git://github.com/philtr/notes.git
+	url = https://github.com/philtr/notes.git
