Fix gh-pages compatibility

--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,9 @@ base-url:
 markdown: kramdown
 paginate: 5
 permalink: pretty
-pygments: true
+highlighter: pygments
 
 exclude: [ vendor ]
 
-title: Phillip's Blog
-tagline: "The Notes, Quotes, and Other Miscellany of Phillip T. Ridlen"
-name: Phillip T. Ridlen
 url: http://phillipridlen.com
 email: p@rdln.net
