--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,13 @@ exclude: [ vendor, s3_website.yml, env.sample ]
 navigation:
   - name: "Notes"
     url: "/"
-  - name: "Open Source"
+  - name: "Projects"
     url: "http://philtr.github.io"
+  - name: "About"
+    url: "/about/"
 
 paginate: 5
-paginate_path: "notes/page/:num"
+paginate_path: "/page/:num"
 
 url: http://phillipridlen.com
 email: p@rdln.net
