--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ navigation:
     url: "http://philtr.github.io"
   - name: "About"
     url: "/about/"
+  - name: "Contact"
+    url: "/contact/"
 
 paginate: 5
 paginate_path: "/page/:num"
