--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,13 @@
-test:
+machine:
+  ruby:
+    version: 2.1.5
+
+dependencies:
   post:
-    - bundle exec jekyll deploy
+    - bundle exec ruby -e "load './vendor/bundle/ruby/1.9.1/bin/s3_website'; resolve_jar('./vendor/bundle/ruby/1.9.1/s3_website-2.7.2', Logger.new(STDOUT))"
+
+deployment:
+  production:
+    branch: master
+    commands:
+      - bundle exec jekyll deploy
