Change topics for "Programming as an image-bearer"

--- a/s3_website.yml
+++ b/s3_website.yml
@@ -59,6 +59,8 @@ redirects:
   notes/2010/08/12/using-the-heroku-gem-inside-your-app/: programming/2010/08/12/using-the-heroku-gem-inside-your-app/
   notes/2010/08/05/shapeshifting-classes: programming/2010/08/05/shapeshifting-classes/
   notes/2010/08/05/shapeshifting-classes/: programming/2010/08/05/shapeshifting-classes/
+  programming/2017/03/02/programming-as-an-image-bearer: christianity/2017/03/02/programming-as-an-image-bearer/
+  programming/2017/03/02/programming-as-an-image-bearer/: christianity/2017/03/02/programming-as-an-image-bearer/
   resume.pdf: http://philtr.net/resume/output/phillip.thomas.ridlen.pdf
 
 # routing_rules:
