--- a/s3_website.yml
+++ b/s3_website.yml
@@ -19,7 +19,7 @@ gzip:
 # See http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region for valid endpoints
 # s3_endpoint: ap-northeast-1
 
-# ignore_on_server: that_folder_of_stuff_i_dont_keep_locally
+ignore_on_server: _DELETE_NOTHING_ON_THE_S3_BUCKET_
 
 # exclude_from_upload:
 #   - those_folders_of_stuff
