--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -10,6 +10,8 @@ data_sources:
   - type: filesystem
     encoding: utf-8
 
+email: p@rdln.net
+
 navigation:
   - name: "Notes"
     url: "/notes/"
