Convert blog post images

--- a/Rules
+++ b/Rules
@@ -24,6 +24,7 @@ end
 
 # Blog Posts
 compile "/posts/**/*.md" do
+  filter :erb
   filter :kramdown
   filter :colorize_syntax, default_colorizer: :rouge
   layout "/post.*"
