--- a/Rules
+++ b/Rules
@@ -22,6 +22,13 @@ compile "/index.haml" do
   write "/index.html"
 end
 
+# KJHS 2016
+compile "/resources/kjhs-2016.haml" do
+  filter :haml
+  layout "/default.*"
+  write "/resources/kjhs/2016/index.html"
+end
+
 # Blog Posts
 compile "/posts/**/*.md" do
   filter :erb
