--- a/Rules
+++ b/Rules
@@ -22,6 +22,13 @@ compile "/index.haml" do
   write "/index.html"
 end
 
+# 404 Page
+compile "/error.haml" do
+  filter :haml
+  layout "/default.*"
+  write "/404.html"
+end
+
 # KJHS 2016
 compile "/resources/kjhs-2016.haml" do
   filter :haml
