--- a/Rules
+++ b/Rules
@@ -66,6 +66,17 @@ compile "/**/*.haml" do
   write item.identifier.without_ext + "/index.html"
 end
 
+# Markdown
+compile "/**/*.md" do
+  filter :erb
+  filter :kramdown
+  filter :colorize_syntax, default_colorizer: :rouge
+
+  layout "/default.*"
+
+  write item.identifier.without_ext + "/index.html"
+end
+
 # Catch-all
 compile "/**/*" do
   write item.identifier.to_s
