Rewrite old hayride URLs to new ones

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   command = "nanoc compile"
   publish = "output"
+
+[[redirects]]
+  from    = "/resources/bbc/hayride/:year/"
+  to      = "/resources/hayride/hayride-:year/"
+  status  = 200
+
