Redirect /notes and about to the anchor on index

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,11 @@
   from    = "/resources/bbc/hayride/:year/"
   to      = "/resources/hayride/hayride-:year/"
   status  = 200
+  
+[[redirects]]
+  from    = "/notes/"
+  to      = "/#notes"
+
+[[redirects]]
+  from    = "/about/"
+  to      = "/#about"
