--- a/Rules
+++ b/Rules
@@ -2,7 +2,7 @@
 
 preprocess do
   begin # blog post attributes from filename
-    post_regex = %r{\A/posts/(links|notes)/(\d+)-(\d+)-(\d+)-(.+).md\z}
+    post_regex = %r{\A/posts/(link|note)s/(\d+)-(\d+)-(\d+)-(.+).md\z}
     @items.find_all(post_regex).each do |item|
       post_type, year, month, day, slug = item.identifier.to_s.match(post_regex).captures
       item[:post_type] = post_type
