Add Linkding data source config

--- a/env.example
+++ b/env.example
@@ -1,4 +1,5 @@
 FRESHRSS_INSTANCE_URL="https://freshrss.example"
 FRESHRSS_USERNAME="username"
 FRESHRSS_API_PASSWORD="password"
-
+LINKDING_URL="https://linkding.example"
+LINKDING_TOKEN="token"
