Add icon and tag selection for linkding

--- a/env.example
+++ b/env.example
@@ -3,3 +3,5 @@ FRESHRSS_USERNAME="username"
 FRESHRSS_API_PASSWORD="password"
 LINKDING_URL="https://linkding.example"
 LINKDING_TOKEN="token"
+YOUTUBE_API_KEY="api-key"
+
