--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -95,4 +95,4 @@ data_sources:
     content_dir: src/links/linkding
     items_root: /links/linkding
     limit: 100
-    tags: []
+    tags: [phillipridlen-pub]
