--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-command = "nanoc compile"
+command = "bundle exec nanoc compile --env=production"
 publish = "output"
 environment = { RUBY_VERSION = "4.0.0" }
